Fix when Pager should collapse its controllers

--- a/src/styles/core/_breakpoints.scss
+++ b/src/styles/core/_breakpoints.scss
@@ -16,7 +16,8 @@
 $breakpoint-attributes: (
   default: (
     xlarge: (
-      min-width: 1920px
+      min-width: 1920px,
+      content-width: 1536px,
     ),
     large: (
       min-width: 1251px,
